[package]
name = "pow_blockchain_simulation"
version = "0.1.0"
authors = ["pierre-l <pierre.larger@gmail.com>"]
repository = "https://github.com/pierre-l/blockchain_network_simulation"

[dependencies]
log = "0.4.1"
env_logger = "0.5.10"
network_simulator = { path = "../network_simulator" }
clap = "2.31.2"
