[package]
name = "pow_blockchain_simulation"
version = "0.1.0"
authors = ["pierre-l <pierre.larger@gmail.com>"]
repository = "https://github.com/pierre-l/blockchain_network_simulation"

[dependencies]
env_logger = "0.5.10"
clap = "2.31.2"
futures = "0.1.19"
log = "0.4.1"
network_simulator = { path = "../network_simulator" }
ring = "0.12.1"
tokio-timer = "0.2.3"
